@@ -2,7 +2,6 @@ package org.terraform.v1_21_R1;
 
 import com.mojang.datafixers.util.Pair;
 import com.mojang.serialization.MapCodec;
-import it.unimi.dsi.fastutil.longs.LongSet;
 import net.minecraft.SystemUtils;
 import net.minecraft.core.BlockPosition;
 import net.minecraft.core.Holder;
@@ -11,7 +10,6 @@ import net.minecraft.core.IRegistryCustom;
 import net.minecraft.core.SectionPosition;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.MinecraftKey;
-import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.RegionLimitedWorldAccess;
 import net.minecraft.server.level.WorldServer;
@@ -29,7 +27,6 @@ import net.minecraft.world.level.levelgen.HeightMap;
 import net.minecraft.world.level.levelgen.RandomState;
 import net.minecraft.world.level.levelgen.WorldGenStage;
 import net.minecraft.world.level.levelgen.blending.Blender;
-import net.minecraft.world.level.levelgen.structure.BuiltinStructureSets;
 import net.minecraft.world.level.levelgen.structure.Structure;
 import net.minecraft.world.level.levelgen.structure.StructureSet;
 import net.minecraft.world.level.levelgen.structure.placement.StructurePlacement;
@@ -39,6 +36,7 @@ import net.minecraft.world.level.levelgen.structure.structures.OceanMonumentStru
 import net.minecraft.world.level.levelgen.structure.structures.StrongholdStructure;
 import net.minecraft.world.level.levelgen.structure.structures.WoodlandMansionStructure;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplateManager;
+import org.jetbrains.annotations.NotNull;
 import org.terraform.coregen.bukkit.TerraformGenerator;
 import org.terraform.data.MegaChunk;
 import org.terraform.data.TerraformWorld;
@@ -54,23 +52,20 @@ import org.terraform.structure.pillager.mansion.MansionPopulator;
 import org.terraform.structure.small.buriedtreasure.BuriedTreasurePopulator;
 import org.terraform.structure.stronghold.StrongholdPopulator;
 import org.terraform.structure.trialchamber.TrialChamberPopulator;
-import org.terraform.tree.VanillaMushroomBuilder;
 
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
 public class NMSChunkGenerator extends ChunkGenerator {
-    private final ChunkGenerator delegate;
-    private final TerraformWorld tw;
-    private final MapRenderWorldProviderBiome mapRendererBS;
-    private final TerraformWorldProviderBiome twBS;
-    private final Method tryGenerateStructure;
+    private final @NotNull ChunkGenerator delegate;
+    private final @NotNull TerraformWorld tw;
+    private final @NotNull MapRenderWorldProviderBiome mapRendererBS;
+    private final @NotNull TerraformWorldProviderBiome twBS;
+    private final @NotNull Method tryGenerateStructure;
     private final ArrayList<MinecraftKey> possibleStructureSets = new ArrayList<>();
-    public NMSChunkGenerator(String worldName, long seed, ChunkGenerator delegate) throws NoSuchMethodException, SecurityException{
+    public NMSChunkGenerator(String worldName, long seed, @NotNull ChunkGenerator delegate) throws NoSuchMethodException, SecurityException{
         super(
                 delegate.d(), //WorldChunkManager d() is getBiomeSource()
                 delegate.d); //Idk what generationSettingsGetter is
@@ -107,21 +102,21 @@ public class NMSChunkGenerator extends ChunkGenerator {
 
 
     @Override //getBiomeSource
-    public WorldChunkManager d() {
+    public @NotNull WorldChunkManager d() {
         return mapRendererBS;
     }
 
-    public TerraformWorld getTerraformWorld() {
+    public @NotNull TerraformWorld getTerraformWorld() {
         return tw;
     }
 
     @Override
-    protected MapCodec<? extends ChunkGenerator> b() {
+    protected @NotNull MapCodec<? extends ChunkGenerator> b() {
         return MapCodec.unit(null);
     }
 
     @Override //createBiomes
-    public CompletableFuture<IChunkAccess> a(RandomState randomstate, Blender blender, StructureManager structuremanager, IChunkAccess ichunkaccess)
+    public @NotNull CompletableFuture<IChunkAccess> a(RandomState randomstate, Blender blender, StructureManager structuremanager, @NotNull IChunkAccess ichunkaccess)
     {
         return CompletableFuture.supplyAsync(SystemUtils.a("init_biomes", () -> {
             return ichunkaccess; //Don't do any calculations here, biomes are set in applyCarvers
@@ -129,8 +124,8 @@ public class NMSChunkGenerator extends ChunkGenerator {
     }
 
     @Override //findNearestMapFeature
-    public Pair<BlockPosition, Holder<Structure>> a(WorldServer worldserver, HolderSet<Structure> holderset,
-                                                    BlockPosition blockposition, int i, boolean flag) {
+    public Pair<BlockPosition, Holder<Structure>> a(WorldServer worldserver, @NotNull HolderSet<Structure> holderset,
+                                                    @NotNull BlockPosition blockposition, int i, boolean flag) {
 
         int pX = blockposition.u(); //getX
         int pZ = blockposition.w(); //getZ
@@ -150,13 +145,13 @@ public class NMSChunkGenerator extends ChunkGenerator {
 
                     int[] coords = StructureLocator.locateSingleMegaChunkStructure(tw, pX, pZ, new MonumentPopulator(), TConfigOption.DEVSTUFF_VANILLA_LOCATE_TIMEOUTMILLIS.getInt());
 
-                    return new Pair<BlockPosition, Holder<Structure>>
+                    return new Pair<>
                             (new BlockPosition(coords[0], 50, coords[1]), holder);
                 } else if (holder.a().getClass() == WoodlandMansionStructure.class) { //Mansion
 
                     int[] coords = StructureLocator.locateSingleMegaChunkStructure(tw, pX, pZ, new MansionPopulator(), TConfigOption.DEVSTUFF_VANILLA_LOCATE_TIMEOUTMILLIS.getInt());
 
-                    return new Pair<BlockPosition, Holder<Structure>>
+                    return new Pair<>
                             (new BlockPosition(coords[0], 50, coords[1]), holder);
                 } else if (holder.a() instanceof JigsawStructure
                         && MinecraftServer.getServer().bc().d(Registries.aR).a(MinecraftKey.a("trial_chambers")) == holder.a()
@@ -164,13 +159,13 @@ public class NMSChunkGenerator extends ChunkGenerator {
 
                     int[] coords = StructureLocator.locateSingleMegaChunkStructure(tw, pX, pZ, new TrialChamberPopulator(), TConfigOption.DEVSTUFF_VANILLA_LOCATE_TIMEOUTMILLIS.getInt());
 
-                    return new Pair<BlockPosition, Holder<Structure>>
+                    return new Pair<>
                             (new BlockPosition(coords[0], 50, coords[1]), holder);
                 } else if (holder.a().getClass() == BuriedTreasureStructure.class) {
                     //Buried Treasure
                     int[] coords = StructureLocator.locateMultiMegaChunkStructure(tw, new MegaChunk(pX, 0, pZ), new BuriedTreasurePopulator(), TConfigOption.DEVSTUFF_VANILLA_LOCATE_TIMEOUTMILLIS.getInt());
                     if(coords == null) return null;
-                    return new Pair<BlockPosition, Holder<Structure>>
+                    return new Pair<>
                             (new BlockPosition(coords[0], 50, coords[1]), holder);
                 }
             }
@@ -189,7 +184,7 @@ public class NMSChunkGenerator extends ChunkGenerator {
     @Override //applyCarvers
     public void a(RegionLimitedWorldAccess regionlimitedworldaccess, long seed,
                   RandomState randomstate, BiomeManager biomemanager,
-                  StructureManager structuremanager, IChunkAccess ichunkaccess,
+                  StructureManager structuremanager, @NotNull IChunkAccess ichunkaccess,
                   WorldGenStage.Features worldgenstage_features)
     {
         //POPULATES BIOMES. IMPORTANT
@@ -213,7 +208,7 @@ public class NMSChunkGenerator extends ChunkGenerator {
      * checks cut out and replaced with TFG code.
      */
     @Override
-    public void a(IRegistryCustom iregistrycustom, ChunkGeneratorStructureState chunkgeneratorstructurestate, StructureManager structuremanager, IChunkAccess ichunkaccess, StructureTemplateManager structuretemplatemanager) {
+    public void a(IRegistryCustom iregistrycustom, @NotNull ChunkGeneratorStructureState chunkgeneratorstructurestate, StructureManager structuremanager, @NotNull IChunkAccess ichunkaccess, StructureTemplateManager structuretemplatemanager) {
         ChunkCoordIntPair chunkcoordintpair = ichunkaccess.f(); //getPos
         SectionPosition sectionposition = SectionPosition.a(ichunkaccess); //bottomOf
         RandomState randomstate = chunkgeneratorstructurestate.c(); //randomState
@@ -240,7 +235,7 @@ public class NMSChunkGenerator extends ChunkGenerator {
 
                     //d() -> getLevelSeed()
                     try{
-                        Object retVal = tryGenerateStructure.invoke(this, list.get(0), structuremanager, iregistrycustom, randomstate,
+                        Object retVal = tryGenerateStructure.invoke(this, list.getFirst(), structuremanager, iregistrycustom, randomstate,
                                 structuretemplatemanager, chunkgeneratorstructurestate.d(),
                                 ichunkaccess, chunkcoordintpair, sectionposition);
                         TerraformGeneratorPlugin.logger.info(chunkcoordintpair.e + "," + chunkcoordintpair.f + " will spawn a vanilla structure, with tryGenerateStructure == " + retVal);
